[FIXES BUG#3200] -  Translation error in FA group creation
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3260 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/fa_groups/_new.erb
+++ b/app/views/fa_groups/_new.erb
@@ -24,7 +24,7 @@
       <div class="label-field-pair">
         <label for="category_name">CCE Grade Set</label>
         <div class="text-input-bg">
-          <%= f.select :cce_grade_set_id ,@grade_sets.map{|m| [m.name,m.id]} ,:prompt=>"Select a Grade Set") %>
+          <%= f.select :cce_grade_set_id ,@grade_sets.map{|m| [m.name,m.id]} ,:prompt=>"Select a Grade Set" %>
         </div>
       </div>
       <%= f.submit "", :value => "► Create", :class => "submit_button" %>
