removed previous years comparison reports from students report page
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3261 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/student/reports.erb
+++ b/app/views/student/reports.erb
@@ -63,9 +63,9 @@
           <% end %>
         <% else %>
           <li><%= link_to "#{t('final_report')}",{:controller=>'exam', :action=>'generated_report4',:student=>@student.id,:type=>'general'} %></li>
-  <%#= link_to "Transcript Report", { :controller => 'exam', :action => 'student_transcript',:transcript=>{:student_id=>@student.id} } %>
-          <li><%= link_to "#{t('compare_past')}", { :controller => 'exam', :action => 'previous_years_marks_overview',:student=>@student.id }%></li>
-          
+          <li><%= link_to "Transcript Report", { :controller => 'exam', :action => 'student_transcript',:transcript=>{:batch_id=>@student.batch_id},:student_id=>@student.id} %></li>
+          <%#= link_to "#{t('compare_past')}", { :controller => 'exam', :action => 'previous_years_marks_overview',:student=>@student.id }%>
+
         <% end %>
       </ul>
 
