type error correction
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3264 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/fa_groups/_edit.erb
+++ b/app/views/fa_groups/_edit.erb
@@ -12,7 +12,7 @@
         <div class="text-input-bg"><%= f.text_field :desc %></div>
       </div>
       <div class="label-field-pair">
-        <label for="category_name">MAx Marks</label>
+        <label for="category_name">Max Marks</label>
         <div class="text-input-bg"><%= f.text_field :max_marks %></div>
       </div>
       <div class="label-field-pair">
