fixed graduated students issue in archived exam report
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3266 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/exam_reports/archived_exam_wise_report.html.erb
+++ b/app/views/exam_reports/archived_exam_wise_report.html.erb
@@ -5,7 +5,7 @@
 
 <div id="content-header">
   <img src="/images/examination/show_exam.png" alt="Exam" />
-  <h1><%= t('exam_reports1') %></h1>
+  <h1><%= t('exam_reports_text') %></h1>
   <h3><%= t('archived_grouped_exam_reports') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
