credit points add and display for common grades if cce, cwa or gpa is enabled for school
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3269 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/grading_levels/_grading_levels.html.erb
+++ b/app/views/grading_levels/_grading_levels.html.erb
@@ -21,12 +21,17 @@
   <%= link_to_remote "#{t('add_grades')}", :url => { :action => 'new', :id => @batch }%>
 
 </div>
+<% if @batch.present?
+  @credit = @batch.grading_type=="1" || @batch.cce_enabled?
+else
+  @credit = Configuration.get_config_value('CCE')=='1' || Configuration.get_config_value('CWA')=='1' || Configuration.get_config_value('GPA')=='1'
+end %>
 <%  unless @grading_levels.empty? %>
   <table id="listing" align="center" width="100%" cellpadding="1" cellspacing="1">
     <tr class="tr-head">
       <td><%= t('name') %></td>
       <td><%= t('min_score') %></td>
-      <% if @batch and @batch.grading_type=="1" %>
+      <% if @credit %>
         <td>Credit Points</td>
       <% end %>
       <td>Description</td>
@@ -36,7 +41,7 @@
       <tr id="grading-level-<%= grade.id %>" class="tr-<%= cycle('odd', 'even') %>">
         <td class="col-2"><%= grade.name %></td>
         <td class="col-2"><%= grade.min_score %></td>
-        <% if @batch and @batch.grading_type=="1" %>
+        <% if @credit %>
           <td class="col-2"><%= grade.credit_points %></td>
         <% end %>
         <td class="col-2"><%= grade.description.present? ? grade.description : "-" %></td>
