--- a/app/views/grading_levels/_edit.html.erb
+++ b/app/views/grading_levels/_edit.html.erb
@@ -40,7 +40,7 @@
       <div class="input-field"><%= f.text_field :description %></div>
     </div>
 
-    <% if @batch and (@batch.grading_type=="1" || @batch.cce_enabled?) %>
+    <% if @credit %>
       <div class="label-field-pair">
         <%= f.label :credit_points, "Credit Points" %>
         <div class="input-field"><%= f.text_field :credit_points %></div>
