--- a/app/views/grading_levels/_grading_levels.html.erb
+++ b/app/views/grading_levels/_grading_levels.html.erb
@@ -24,7 +24,7 @@
 <% if @batch.present?
   @credit = @batch.grading_type=="1" || @batch.cce_enabled?
 else
-  @credit = Configuration.get_config_value('CCE')=='1' || Configuration.get_config_value('CWA')=='1' || Configuration.get_config_value('GPA')=='1'
+  @credit = Configuration.cce_enabled? || Configuration.get_config_value('CWA')=='1' || Configuration.get_config_value('GPA')=='1'
 end %>
 <%  unless @grading_levels.empty? %>
   <table id="listing" align="center" width="100%" cellpadding="1" cellspacing="1">
