modified archived student reports [fixed #3172]
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3275 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/archived_student/generated_report3.html.erb
+++ b/app/views/archived_student/generated_report3.html.erb
@@ -45,7 +45,7 @@
             <%= exam_group.name %>
           </td>
           <% exam = Exam.find_by_subject_id(@subject.id,:conditions=>{:exam_group_id=>exam_group.id}) %>
-          <% exam_score = ArchivedExamScore.find_by_student_id(@student.id,:conditions=>{:exam_id=>exam.id}) unless exam.nil? %>
+          <% exam_score = ExamScore.find_by_student_id(@student.id,:conditions=>{:exam_id=>exam.id}) unless exam.nil? %>
           <% if exam_group.exam_type == 'Marks' %>
             <td class="col-2"><%= exam_score.nil? ? '-' : exam_score.marks %></td>
             <td class="col-2"><%= exam_score.nil? ? '-' : exam.maximum_marks %></td>
