--- a/app/views/archived_student/generated_report.html.erb
+++ b/app/views/archived_student/generated_report.html.erb
@@ -38,73 +38,170 @@
   <% end %>
   <div class="box">
     <h3 align="center"><%= @student.batch.full_name %> - <%= @exam_group.name %></h3>
-
-    <h4>   <%= @student.full_name %> </h4>
-
     <% exam_score = [] %>
+
     <% @exams.each do |exam| %>
-      <% exam_score.push exam.archived_exam_scores.find_by_student_id(@student.id) unless exam.archived_exam_scores.find_by_student_id(@student.id).nil?  %>
+      <% exam_score.push exam.exam_scores.find_by_student_id(@student.id) unless exam.exam_scores.find_by_student_id(@student.id).nil?  %>
     <% end %>
-    <% total_marks_attained = 0 %>
-    <% total_max_marks = 0 %>
-
-    <table id="listing" align="center" width="100%" cellpadding="1" cellspacing="1">
-      <tr class="tr-head">
-        <td><%= t('subject') %></td>
-        <% if @exam_group.exam_type == 'Marks' %>
-          <td><%= t('marks') %></td>
-          <td><%= t('max') %></td>
-          <td>%</td>
-        <% elsif @exam_group.exam_type == 'Grades' %>
-          <td><%= t('grades') %></td>
-        <% else %>
-          <td><%= t('marks') %></td>
-          <td><%= t('max') %></td>
-          <td><%= t('grades') %></td>
-          <td>%</td>
-        <% end %>
-      </tr>
-      <% exam_score.each do |es| %>
-        <tr class="tr-<%= cycle('odd', 'even') %>">
-          <td class="col-1"> <%= es.exam.subject.name %></td>
-          <% if @exam_group.exam_type == 'Marks' %>
-            <td class="col-1"><%= es.marks %></td>
-            <% marks = es.marks.nil? ? 0 : es.marks  %>
-            <% total_marks_attained = total_marks_attained + marks %>
-            <td class="col-1"><%= es.exam.maximum_marks %></td>
-            <% total_max_marks = total_max_marks+es.exam.maximum_marks%>
-            <td class="col-1"><%= es.calculate_percentage %></td>
-          <% elsif @exam_group.exam_type == 'Grades' %>
-            <% grading_level = es.grading_level.nil? ? '-' : es.grading_level.name %>
-            <td class="col-1"><%= grading_level %></td>
-          <% else %>
-            <td class="col-1"><%= es.marks %></td>
-            <% marks = es.marks.nil? ? 0 : es.marks %>
-            <% total_marks_attained = total_marks_attained + marks %>
-            <td class="col-1"><%= es.exam.maximum_marks %></td>
-            <% total_max_marks = total_max_marks+es.exam.maximum_marks%>
-            <td class="col-1"><%= grading_level %></td>
-            <td class="col-1"><%= es.calculate_percentage %></td>
+    <% if @batch.grading_type=="2" %>
+      <% total_credits=0 %>
+      <% total_weighted_marks=0 %>
+      <div id="score-table">
+        <div class="custom_header">
+          <span class="student"><%= "#{@student.full_name} - #{@student.admission_no}" %></span>
+        </div>
+        <table id="listing" align="center" width="100%" cellpadding="1" cellspacing="1">
+          <tr class="tr-head">
+            <td><%= t('subject_code') %></td>
+            <td><%= t('title') %></td>
+            <td><%= t('marks') %></td>
+            <td><%= t('credit') %></td>
+            <td><%= t('grade') %></td>
+            <td><%= t('weighted_marks') %></td>
+          </tr>
+          <% exam_score.each do |es| %>
+            <tr class="tr-<%= cycle('odd', 'even') %>">
+              <td class="col-1"> <%= es.exam.subject.code %></td>
+              <td class="col-1"> <%= es.exam.subject.name %></td>
+              <td class="col-2"><%= es.marks.present? ? mark=(es.marks.to_f/es.exam.maximum_marks.to_f)*100 : '-' %></td>
+              <td class="col-2"><%= es.exam.subject.credit_hours %></td>
+              <% total_credits = total_credits + es.exam.subject.credit_hours.to_f %>
+              <td class="col-2"><%= es.grading_level.present? ? es.grading_level : "-" %></td>
+              <% weighted_mark=0 %>
+              <% weighted_mark = mark.to_f * es.exam.subject.credit_hours.to_f if es.marks.present? %>
+              <% total_weighted_marks = total_weighted_marks + weighted_mark %>
+              <td class="col-1"><%= weighted_mark %></td>
+            </tr>
           <% end %>
-        </tr>
-      <% end %>
-
-      <% if @exam_group.exam_type == 'Marks' or @exam_group.exam_type == 'MarksAndGrades' %>
-        <tr class="tr-head">
-          <td><%= t('total_marks') %>:</td>
-          <td><%= total_marks_attained %></td><td><%= total_max_marks %></td>
-          <%  if @exam_group.exam_type == 'MarksAndGrades' %>
+          <tr class="tr-blank"></tr>
+          <tr class="tr-head">
+            <td colspan="3" align="right"><%= t('total') %></td>
+            <td><%= total_credits %></td>
             <td>-</td>
+            <td><%= total_weighted_marks %></td>
+          </tr>
+        </table>
+      </div>
+      <h5><%= t('weighted_average') %> =
+        <% unless total_credits==0 %>
+          <%= "%.2f" %(total_weighted_marks.to_f/total_credits.to_f) %>
+        <% else %>
+          -
+        <% end %>
+      </h5>
+    <% elsif @batch.grading_type=="1" %>
+      <% total_credit_points=0 %>
+      <% total_credit_hours=0 %>
+      <div id="score-table">
+        <div class="custom_header">
+          <span class="student"><%= "#{@student.full_name} - #{@student.admission_no}" %></span>
+        </div>
+        <table id="listing" align="center" width="100%" cellpadding="1" cellspacing="1">
+          <tr class="tr-head">
+            <td><%= t('subject_code') %></td>
+            <td><%= t('subject_title') %></td>
+            <td><%= t('credits') %></td>
+            <td><%= t('marks') %></td>
+            <td><%= t('remarks') %></td>
+          </tr>
+          <% exam_score.each do |es| %>
+            <tr class="tr-<%= cycle('odd', 'even') %>">
+              <td class="col-1"> <%= es.exam.subject.code %></td>
+              <td class="col-1"> <%= es.exam.subject.name %></td>
+              <td class="col-2"><%= es.exam.subject.credit_hours %></td>
+              <% total_credit_hours = total_credit_hours + es.exam.subject.credit_hours.to_f %>
+              <td class="col-2"><%= es.grading_level.present? ? es.grading_level : "-" %></td>
+              <% points=0 %>
+              <% points = (es.grading_level.credit_points.to_f) * (es.exam.subject.credit_hours.to_f) if es.grading_level.present? %>
+              <% total_credit_points = total_credit_points + points %>
+              <td class="col-1"><%= es.grading_level.present? ? (es.grading_level.description.present? ? es.grading_level.description : "-") : "-" %></td>
+            </tr>
           <% end %>
-          <td><%= sprintf('%.2f',total_marks_attained*100/total_max_marks.to_f) unless total_max_marks == 0 %></td>
-        </tr>
-      <% end %>
-    </table>
+          <tr class="tr-blank"></tr>
+          <tr class="tr-head">
+            <td colspan="2" align="right"><%= t('total') %></td>
+            <td><%= total_credit_hours %></td>
+            <td>-</td>
+            <td>-</td>
+          </tr>
+        </table>
+      </div>
+      <h5><%= t('grade_point_average_gpa') %> =
+        <% unless total_credit_hours==0 %>
+          <%= "%.2f" %(total_credit_points.to_f/total_credit_hours.to_f) %>
+        <% else %>
+          -
+        <% end %> </h5>
 
-    <% if @exam_group.exam_type == 'Marks' or @exam_group.exam_type == 'MarksAndGrades' %>
-      <h5><%= t('class_average_marks') %> : <%="%.2f" %@exam_group.batch_average_marks('marks') unless total_max_marks == 0%> | Class Average % : <%="%.2f" %(@exam_group.batch_average_marks('marks')*100/total_max_marks) unless total_max_marks == 0 %></h5>
-      <script type="text/javascript" src="/javascripts/swfobject.js"></script>
-      <%= @graph %>
+    <% else %>
+      <% total_marks_attained = 0 %>
+      <% total_max_marks = 0 %>
+      <div id="score-table">
+        <div class="custom_header">
+          <span class="student"><%= "#{@student.full_name} - #{@student.admission_no}" %></span>
+        </div>
+        <table id="listing" align="center" width="100%" cellpadding="1" cellspacing="1">
+          <tr class="tr-head">
+            <td><%= t('subject') %></td>
+            <% if @exam_group.exam_type == 'Marks' %>
+              <td><%= t('marks_obtained') %></td>
+              <td><%= t('max') %></td>
+              <td><%= t('percentage') %>(%)</td>
+            <% elsif @exam_group.exam_type == 'Grades' %>
+              <td><%= t('grades') %></td>
+            <% else %>
+              <td><%= t('marks_obtained') %></td>
+              <td><%= t('max') %></td>
+              <td><%= t('grades') %></td>
+              <td><%= t('percentage') %>(%)</td>
+            <% end %>
+          </tr>
+          <% exam_score.each do |es| %>
+            <tr class="tr-<%= cycle('odd', 'even') %>">
+              <td class="col-1"> <%= es.exam.subject.name %></td>
+              <% if @exam_group.exam_type == 'Marks' %>
+                <td class="col-1"><%= es.marks || '-' %></td>
+                <% total_marks_attained = total_marks_attained+(es.marks || 0) %>
+                <td class="col-1"><%= es.exam.maximum_marks %></td>
+                <% total_max_marks = total_max_marks+es.exam.maximum_marks%>
+                <td class="col-1"><%= es.calculate_percentage %></td>
+              <% elsif @exam_group.exam_type == 'Grades' %>
+                <td class="col-1"><%= es.grading_level || "-" %></td>
+              <% else %>
+                <td class="col-1"><%= es.marks || "-" %></td>
+                <% total_marks_attained = total_marks_attained+(es.marks || 0) %>
+                <td class="col-1"><%= es.exam.maximum_marks %></td>
+                <% total_max_marks = total_max_marks+es.exam.maximum_marks%>
+                <td class="col-1"><%= es.grading_level || "-" %></td>
+                <td class="col-1"><%= es.calculate_percentage %></td>
+              <% end %>
+            </tr>
+          <% end %>
+
+          <% if @exam_group.exam_type == 'Marks' or @exam_group.exam_type == 'MarksAndGrades' %>
+            <tr class="tr-head">
+              <td><%= t('total_marks') %>:</td>
+              <td><%= total_marks_attained %></td><td><%= total_max_marks %></td>
+              <%  if @exam_group.exam_type == 'MarksAndGrades' %>
+                <td>-</td>
+              <% end %>
+              <td><%= "%.2f" %(total_marks_attained*100/total_max_marks) unless total_max_marks == 0 %></td>
+            </tr>
+          <% end %>
+        </table>
+
+        <% if @exam_group.exam_type == 'Marks' or @exam_group.exam_type == 'MarksAndGrades' %>
+          <div class="custom_header">
+            <%= t('class_average_marks') %> : <%= "%.2f" %@exam_group.batch_average_marks('marks') unless total_max_marks == 0%> | <%= t('class_average') %> % : <%=  "%.2f" %(@exam_group.batch_average_marks('marks')*100/total_max_marks) unless total_max_marks == 0 %>
+          </div>
+        <% end %>
+      </div>
+    <% end %>
+    <% unless @batch.grading_type=="1" %>
+      <% if @exam_group.exam_type == 'Marks' or @exam_group.exam_type == 'MarksAndGrades' %>
+        <script type="text/javascript" src="/javascripts/swfobject.js"></script>
+        <%= @graph %>
+      <% end %>
     <% end %>
 
     <div class="extender"></div>
