--- a/app/views/archived_student/reports.erb
+++ b/app/views/archived_student/reports.erb
@@ -34,10 +34,10 @@
 
     <div class="exam-results-reports-col">
     <% if permitted_to? :exam_report, :student %>
-      <h4><%= t('recent_exams') %><</h4>
+      <h4><%= t('recent_exams') %></h4>
       <ul>
         <% @exam_groups.each do |e| %>
-          <li><%= link_to e.name, {  :action => 'generated_report',:exam_group=>e.id, :student => @student.id} %></li>
+          <li><%= link_to e.name, { :action => 'generated_report',:exam_group=>e.id, :student => @student.id} %></li>
         <% end %>
       </ul>
     <%end%>
@@ -45,7 +45,7 @@
       <h4><%= t('subject_wise_result') %></h4>
       <ul>
         <% @subjects.each do |s| %>
-          <li><%= link_to s.name, {  :action => 'generated_report3', :student => @student.id, :subject => s.id } %></li>
+          <li><%= link_to s.name, { :action => 'generated_report3', :student => @student.id, :subject => s.id } %></li>
         <% end %>
       </ul>
     </div>
@@ -55,30 +55,15 @@
       <h4><%= t('detailed_report') %></h4>
       <ul>
         <% unless @grouped_exams.empty? %>
-        <li><%= link_to "#{t('final_report')}(#{t('exam_goruped')})",{ :action=>'generated_report4',:student=>@student.id,:type=>'grouped'} %></li>
-        <li><%= link_to "#{t('compare_past')}(#{t('exam_goruped')})", {  :action => 'previous_years_marks_overview',:student=>@student.id,:type=>'grouped' } %></li>
+        <li><%= link_to "Transcript Report", { :controller=>'exam', :action => 'student_transcript',:transcript=>{:batch_id=>@student.batch_id},:student_id=>@student.former_id,:flag=>"1" } %></li>
         <% if Configuration.cce_enabled? %>
             <li><%= link_to "CCE Transcript Report", { :controller => 'cce_reports', :action => 'student_transcript',:id=>@student.id, :type=>"former" }%></li>
           <% end %>
         <% else %>
-        <li><%= link_to "#{t('final_report')}",{ :action=>'generated_report4',:student=>@student.id,:type=>'general'} %></li>
-        <li><%= link_to "#{t('compare_past')}", {  :action => 'previous_years_marks_overview',:student=>@student.id,:type=>'general' } %></li>
+        <li><%= link_to "Transcript Report", { :controller=>'exam', :action => 'student_transcript',:transcript=>{:batch_id=>@student.batch_id},:student_id=>@student.former_id,:flag=>"1" } %></li>
         <% end %>
         
       </ul>
-
-      <% unless @old_batches.nil? %>
-        <h4><%= t('archives') %></h4>
-        <ul>
-          <% @old_batches.each do |b| %>
-          <% unless @grouped_exams.empty? %>
-            <li><%= link_to b.name+'-G', {  :action => 'academic_report', :student => @student.id, :year => b.id,:type=>'grouped' } %></li>
-            <% else %>
-            <li><%= link_to b.name, {  :action => 'academic_report', :student => @student.id, :year => b.id,:type=>'general' } %></li>
-            <% end %>
-          <% end %>
-        </ul>
-      <% end %>
 
 
     </div>
