change of link title - observation->co-scpolastic, fa->scholastic
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3282 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/cce_settings/co_scholastic.html.erb
+++ b/app/views/cce_settings/co_scholastic.html.erb
@@ -38,13 +38,13 @@
   <div class="box">
 
     <div class="link-box">
-      <div class="link-heading"><%= link_to t("obs_groups"),:controller=>'observation_groups' %></div>
-      <div class="link-descr"><%= t("obs_groups_descr") %></div>
+      <div class="link-heading"><%= link_to "Co-Scholastic Items",:controller=>'observation_groups' %></div>
+      <div class="link-descr"><%= "Manage co-scholastic items" %></div>
     </div>
 
     <div class="link-box">
-      <div class="link-heading"><%= link_to t("observation_groups_assignment"),:controller=>'observation_groups',:action=>'assign_courses' %></div>
-      <div class="link-descr"><%= t("observation_groups_assignment_descr") %></div>
+      <div class="link-heading"><%= link_to "Assign Co-Scholastic Items",:controller=>'observation_groups',:action=>'assign_courses' %></div>
+      <div class="link-descr"><%= "Assign Co-Scholastic itesms to courses." %></div>
     </div>
 
     <div class="extender"></div>
