--- a/app/views/cce_exam_categories/_categories.erb
+++ b/app/views/cce_exam_categories/_categories.erb
@@ -1,7 +1,7 @@
 <div class="box">
     <table align="center" width="100%" cellpadding="1" cellspacing="1">
       <tr class="tr-head">
-        <td>CCE exam_categories</td>
+        <td>CCE Exam Categories</td>
         <td></td>
       </tr>
       <tr>
