fixed page break issue in ranking level pdf [fixed #3110]
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3289 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/exam/student_ranking_level_report_pdf.html.erb
+++ b/app/views/exam/student_ranking_level_report_pdf.html.erb
@@ -61,18 +61,29 @@
           <% end %>
           <% unless ranked_students.empty? %>
             <% c = 'even' %>
+            <% i=0 %>
             <table id="pdf-table" width="100%" cellspacing="0">
               <tr class="table-header">
                 <td><%= t('sl_no') %></td>
                 <td><%= t('adm_no') %></td>
                 <td><%= t('name') %></td>
               </tr>
-              <% ranked_students.each_with_index do |s,i| %>
+              <% ranked_students.each_with_index do |s,ind| %>
+                <% if i==47 %>
+                  <tr class="page-break"><td colspan="3"></td></tr>
+                  <tr class="table-header">
+                    <td><%= t('sl_no') %></td>
+                    <td><%= t('adm_no') %></td>
+                    <td><%= t('name') %></td>
+                  </tr>
+                  <%i=0%>
+                <% end %>
                 <tr class="<%= cycle(c,(["odd","even"]-[c]).first) %>">
-                  <td class="col-pdf"><%= i+1 %></td>
+                  <td class="col-pdf"><%= ind+1 %></td>
                   <td class="col-pdf"><%= s.admission_no.present? ? s.admission_no : "-" %></td>
                   <td class="col-pdf"><%= s.full_name %></td>
                 </tr>
+                <% i=i+1 %>
               <% end %>
             </table>
           <% else %>
