fixed nill issue in generated report pdf
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3291 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/archived_student/generated_report_pdf.erb
+++ b/app/views/archived_student/generated_report_pdf.erb
@@ -90,7 +90,7 @@
               <td class="col-pdf"><%= exam.subject.name %></td>
               <td class="col-pdf"> <%= mark %> </td>
               <td class="col-pdf"><%= exam.subject.credit_hours %></td>
-              <td class="col-pdf"><%= exam_score.grading_level.present? ? exam_score.grading_level : "-" %></td>
+              <td class="col-pdf"><%= exam_score.present? ? (exam_score.grading_level.present? ? exam_score.grading_level : "-") : "-" %></td>
               <td class="col-pdf"><%= weighted_mark %></td>
             </tr>
           <% end %>
@@ -136,8 +136,8 @@
               <td class="col-pdf"><%= exam.subject.code %></td>
               <td class="col-pdf"><%= exam.subject.name %></td>
               <td class="col-pdf"><%= exam.subject.credit_hours %></td>
-              <td class="col-pdf"><%= exam_score.grading_level.present? ? exam_score.grading_level : "-" %></td>
-              <td class="col-pdf"><%= exam_score.grading_level.present? ? (exam_score.grading_level.description.present? ? exam_score.grading_level.description : "-") : "-" %></td>
+              <td class="col-pdf"><%= exam_score.present? ? (exam_score.grading_level.present? ? exam_score.grading_level : "-") : "-" %></td>
+              <td class="col-pdf"><%= exam_score.present? ? (exam_score.grading_level.present? ? (exam_score.grading_level.description.present? ? exam_score.grading_level.description : "-") : "-") : "-" %></td>
             </tr>
           <% end %>
           <tr class="tr-blank"></tr>
